sdk_tests/tests/create-type-spec-macro-fail/tuple_style_enum.rs
#![no_main]
use create_type_spec_derive::CreateTypeSpec;

#[derive(CreateTypeSpec)]
enum MyEnum {
    #[discriminant(0)]
    SomeTuple(u8, u8),
}